<resources>
    <string name="app_name">AceTimeTracker</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_todo">TODO</string>
    <string name="btn_register">Register</string>
    <string name="already_have_account_login_here">Already have account? Login here</string>
    <string name="title_activity_timetracker">timetracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ACE! Time Tracker</string>
    <string name="nav_header_subtitle">st10203065@vcconnect.edu.za</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="timetracker">Timetracker</string>
    <string name="logout">Logout</string>


    <!-- Strings related to login -->


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_todo">TODO</string>
    <string name="btn_todo">TODO</string>
    <string name="save_todo">Save</string>
    <string name="upload_todo">Upload</string>
    <string name="edit_category">Category</string>


    <string name="comp_profile">Profile</string>
    <string name="profile_todo">TODO</string>
    <string name="back_button_description">Back</string>
    <string name="logo_description">ACELogo</string>
    <string name="about_text">This application was developed with students in mind.

        It aims to provide a user-friendly interface for tracking time and managing tasks efficiently.
        This application is developed by Mpho Ndlela.
        We hope it helps you study better and ACE IT!!.</string>
    We hope it helps you study better and ACE IT !!
    <string name="btn_upload_image">Upload Image</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="enter_end_time">Enter End Time</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="img_todo">TODO</string>
    <string name="end_date">End Date:</string>
    <string name="end_time">End Time:</string>
    <string name="start_date">Start Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="total_allocated_time">Total Allocated Time:</string>
    <string name="up_category">Category</string>
    <string name="myprog_category">Category</string>
    <string name="myprog_todo">TODO</string>
    <string name="myprog_time_spent">Time Spent</string>
    <string name="edit_profile_image" />
    <string name="profile_image">profile_image</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_address">Email Address</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_upload_profile_picture">Upload Profile Picture</string>


</resources>