<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/baseline_format_list_numbered_24"
            android:title="Categories" />
        <item
            android:id="@+id/nav_timesheet"
            android:icon="@drawable/ic_categories"
            android:title="Timesheet" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="About" />
        <item
            android:id="@+id/nav_myprogress"
            android:icon="@drawable/ic_progress"
            android:title="My Progress" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timetracker"
            android:title="@string/timetracker" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/action_settings"
         />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_graph"
            android:title="Graph" />

    </group>

    <item android:title="Logout">

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>
