<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Display Name:"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editDisplayNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_display_name"
            android:minHeight="48dp"
            android:autofillHints=""
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address:"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:autofillHints=""
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_account_circle"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/uploadProfilePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/profile_upload_profile_picture"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/saveProfileChangesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red"
            android:text="Save Changes"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/profilePictureLoadingAnimation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:lottie_rawRes="@raw/runningdino" />

</FrameLayout>